--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@telegram-apps/sdk": "^3.10.1",
+    "@telegram-apps/sdk-react": "^3.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
